Shift to tailing the downloader logs

--- a/ytcron/Dockerfile
+++ b/ytcron/Dockerfile
@@ -3,6 +3,7 @@ MAINTAINER docker.c@nsuckmyballs.com
 
 ADD get-subs /etc/periodic/15min/get-subs
 RUN chmod 0755 /etc/periodic/15min/get-subs
+RUN touch /var/log/ytcron.log
 RUN touch /var/log/cron.log
 
 RUN apk update \
@@ -10,6 +11,6 @@ RUN apk update \
 	&& rm -rf /var/cache/apk/*
 
 # Run the command on container startup
-CMD crond && tail -f /var/log/cron.log
+CMD crond && tail -f /var/log/ytcron.log
 
 # First attempt. Hope it works?
