Fix bozotic variable naming.

--- a/ytcron/Dockerfile
+++ b/ytcron/Dockerfile
@@ -12,4 +12,5 @@ RUN apk update \
 	&& rm -rf /var/cache/apk/*
 
 # Run the command on container startup
-CMD crond && tail -f /var/log/ytcron.log
+# CMD crond && tail -f /var/log/ytcron.log
+CMD crond
