Hopefully adapt to Alpine changes?

--- a/ytcron/Dockerfile
+++ b/ytcron/Dockerfile
@@ -7,8 +7,8 @@ RUN touch /var/log/ytcron.log
 RUN touch /var/log/cron.log
 
 RUN apk update \
-	&& apk add ca-certificates ffmpeg zsh \
-	&& apk add youtube-dl --update-cache --repository http://dl-4.alpinelinux.org/alpine/edge/community/ \
+	&& apk add ca-certificates zsh \
+	&& apk add youtube-dl --update-cache --repository http://dl-4.alpinelinux.org/alpine/edge/community/x86 \
 	&& rm -rf /var/cache/apk/*
 
 # Run the command on container startup
