Okay, tee was a bad idea.

--- a/ytcron/Dockerfile
+++ b/ytcron/Dockerfile
@@ -7,15 +7,7 @@ RUN touch /var/log/ytcron.log
 RUN touch /var/log/cron.log
 
 RUN apk update \
-	&& apk add ca-certificates coreutils zsh youtube-dl \
+	&& apk add ca-certificates zsh youtube-dl \
 	&& rm -rf /var/cache/apk/*
 
-# I think Alpine is using community by default now?
-# --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
-
-# VOLUME ["/base"]
-# ENTRYPOINT ["crond"]
-CMD crond | tee /base/ytcron.log
-
-# DSM's log viewer is useless; we'll monitor logs some other way.
-# tail -f /var/log/ytcron.log
+CMD crond && tail -f /base/ytcron.log
