Convert to fish.

--- a/ytcron/Dockerfile
+++ b/ytcron/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER docker.c@nsuckmyballs.com
 ADD get-subs /etc/periodic/15min/get-subs
 RUN chmod 0755 /etc/periodic/15min/get-subs
 RUN apk update \
-	&& apk add ca-certificates zsh youtube-dl \
+	&& apk add ca-certificates fish youtube-dl \
 	&& rm -rf /var/cache/apk/*
 CMD /etc/periodic/15min/get-subs
