See if we can go back to crond?

--- a/ytcron/Dockerfile
+++ b/ytcron/Dockerfile
@@ -6,4 +6,4 @@ RUN chmod 0755 /etc/periodic/15min/get-subs
 RUN apk update \
 	&& apk add ca-certificates coreutils fish youtube-dl \
 	&& rm -rf /var/cache/apk/*
-CMD /etc/periodic/15min/get-subs
+CMD crond && tail -f /var/log/cron.log
